DrawBroad: fix visible scrollbar on chromium-based browser

--- a/src/widgets/DrawBroad/draw_broad.styl
+++ b/src/widgets/DrawBroad/draw_broad.styl
@@ -9,7 +9,6 @@
     font-size: 13px;
     padding: 1em;
     box-sizing: border-box;
-    overflow: scroll;
 
 
 .draw-broad-canvas
